fix: prove 9.3.4 preaggregation parity